--- a/static/app.css
+++ b/static/app.css
@@ -1,6 +1,8 @@
 body {
     font-family: "Poppins", sans-serif!important; 
     overflow-x: hidden;
+    margin: 0;
+ 
 }
 * {
     box-sizing: border-box;
